--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="msapplication-config" content="browserconfig.xml">
   <title>Solutions FTB – The One-Man Dev Shop</title>
   <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <meta property="og:image" content="https://solutionsftb.com/assets/og-image.png" />
+  <link rel="icon" href="assets/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="assets/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
+  <link rel="manifest" href="assets/site.webmanifest">
+  <meta name="msapplication-TileImage" content="assets/mstile-150x150.png">
+  <meta name="msapplication-TileColor" content="#0f172a">
+
 </head>
 <body>
   <header>
